[gd_scene load_steps=5 format=3 uid="uid://bdmlwiqmqtulo"]

[ext_resource type="Script" path="res://scripts/levels/level_2.gd" id="1_rtukf"]
[ext_resource type="PackedScene" uid="uid://cs6sy82mme6s4" path="res://scenes/ui/zoomies_ui.tscn" id="2_myug6"]
[ext_resource type="PackedScene" uid="uid://gi8h4kub3elw" path="res://scenes/cats/random.tscn" id="3_33dxy"]
[ext_resource type="PackedScene" uid="uid://c4wfxjktfnjdu" path="res://scenes/timer.tscn" id="4_3364f"]

[node name="Level2" type="Node2D"]
script = ExtResource("1_rtukf")
timer_sec = 20

[node name="ZoomiesUI" parent="." instance=ExtResource("2_myug6")]
position = Vector2(-960, -540)

[node name="Cat1" parent="." instance=ExtResource("3_33dxy")]
position = Vector2(-600, -358)
scale = Vector2(0.3, 0.3)

[node name="Cat2" parent="." instance=ExtResource("3_33dxy")]
position = Vector2(22, -358)
scale = Vector2(0.3, 0.3)

[node name="Cat3" parent="." instance=ExtResource("3_33dxy")]
position = Vector2(-286, 8)
scale = Vector2(0.3, 0.3)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="LevelTimer" parent="." instance=ExtResource("4_3364f")]

[connection signal="ready" from="." to="." method="_on_ready"]
